--- a/src/pages/Detail/Detail.css
+++ b/src/pages/Detail/Detail.css
@@ -2,22 +2,24 @@
   background-color: blue;
   border-radius: 10px;
   margin-right: 5px;
-  padding: 5px 10px;
+  padding: 7px 10px;
   width: fit-content;
   font-size: 17px;
   font-weight: 500;
   letter-spacing: 1px;
+  color: white;
 }
 
 #rating {
   background-color: green;
   border-radius: 10px;
-  margin-top: 10px;
+  margin-top: 12px;
   padding: 5px 10px;
   width: fit-content;
   font-size: 17px;
   font-weight: 500;
   letter-spacing: 1px;
+  color: white;
 }
 
 #language {
@@ -29,4 +31,5 @@
   font-size: 17px;
   font-weight: 500;
   letter-spacing: 1px;
+  color: white;
 }
