--- a/src/pages/Search/Search.css
+++ b/src/pages/Search/Search.css
@@ -34,3 +34,10 @@ h1 {
   border-radius: 5px;
   cursor: pointer;
 }
+
+@media (min-width: 768px) {
+  .card {
+    width: 300px;
+    margin: 0 auto;
+  }
+}
