--- a/src/components/protectedRoute/ProtectedRoute.css
+++ b/src/components/protectedRoute/ProtectedRoute.css
@@ -1,7 +1,8 @@
 .loading {
   display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
   width: 100vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
